frontend/src/components/layout/Footer.scss
@import '@/styles/variables.scss';
@import '~bootstrap/scss/functions';
@import '~bootstrap/scss/variables';
@import '~bootstrap/scss/mixins/_breakpoints';

#footer {
  --land-ack-box-height: clamp(120px, calc(192px - 3.75vw), 180px);

  padding-top: calc(var(--land-ack-box-height) / 2);
  position: relative;
  background-color: $colorBlue;
  margin-top: 5vh;

  .land-acknowledgement-box {
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    background-color: $colorBlueMed;
    z-index: 10;
    width: calc(100% - 2rem);
    height: var(--land-ack-box-height);
    overflow-y: auto;

    p {
      padding: clamp(1rem, 2vh, 2rem) clamp(1.25rem, 4vw, 4rem);
      line-height: 1.75;
    }

    @include media-breakpoint-up(lg) {
      width: 55%;
    }
  }
}

#home-footer {
  max-width: $pageMaxWidth;
  font-size: 0.8rem;
  padding: 48px $pagePadding;
  margin: 0 auto;

  .logo-column {
    width: 430px;
  }

  .links-container {
    margin-left: 55px;
    @media (max-width: 1058px) {
      margin-left: 0;
    }
  }

  .icon {
    width: 28px;
    height: 28px;
    padding-right: 10px;
  }

  .footer-heading {
    font-size: 1.05rem;
    font-weight: bold;
    color: $colorWhite;
    margin-bottom: 18px;
    @media (max-width: $mdBreakpoint) {
      margin-top: 16px;
    }
  }

  .links-column {
    width: 174px;
    @media (max-width: 1052px) {
      width: 164px;
    }
    @media (max-width: 992px) {
      width: 152px;
    }
    @media (max-width: 950px) {
      width: 130px;
    }
    @media (max-width: 900px) {
      width: 300px;
    }
    @media (max-width: 767px) {
      width: 390px;
    }
  }

  .paragraph-links {
    font-size: 1.05rem;
  }

  .back-original-link {
    margin-top: 32px;
  }

  hr {
    border-top: 1px solid $colorGold;
    opacity: 1;
    width: 38px;
  }

  @media (min-width: $lgBreakpoint) {
    padding: 48px $pagePaddingLg;
  }

  .footer-utility-link {
    font-size: 1.05rem;
    margin-right: 26px;
    margin-bottom: 16px;
    &:last-of-type {
      margin-right: 0;
    }
    @media (min-width: $mdBreakpoint) {
      margin-bottom: 0;
    }
  }

  a {
    color: $colorWhite;
    text-decoration: none;
    &:hover,
    &:focus-visible {
      text-decoration: underline;
    }
    &:focus-visible {
      border: $colorWhite solid 2px;
      outline: $colorBlueMed solid 2px;
      outline-offset: 0;
      border-radius: 4px;
    }
  }
}

